adjust button width to stop text wrap on phone screen

--- a/app/assets/styles/home.scss
+++ b/app/assets/styles/home.scss
@@ -42,7 +42,7 @@
   display: block;
   margin: 20px auto;
   height: 50px;
-  width: 200px;
+  width: 250px;
   background: #FFF;
   color: #000;
   font-family: $main-header-font;
